--- a/rockstarsite/rockstarsite/rockstarsite.csproj
+++ b/rockstarsite/rockstarsite/rockstarsite.csproj
@@ -108,6 +108,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="motorhead.html" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
     <Content Include="Web.config" />
